--- a/landing_page.html
+++ b/landing_page.html
@@ -88,7 +88,7 @@
 							<div class="modal-body">
 								<!--Info-->
 								<div class="info">
-									<form id="editForm" class="row g-3">
+									<form id="new-form" class="row g-3">
 										<div class="col-md-4">
 											<label for="new-first-name" class="form-label">First Name</label>
 											<input name="FirstName" type="name" class="form-control" id="new-first-name">
@@ -185,7 +185,7 @@
 				<div class="d-flex align-items-center w-100" style="padding: 5px; justify-content: space-between;">
 					<h1>Contact Info</h1>
 					<div>
-						<button class="btn btn-primary rounded" data-bs-toggle="modal" data-bs-target="#editModal">
+						<button class="btn btn-primary rounded" data-bs-toggle="modal" data-bs-target="#updateModal">
 							<div class="d-flex align-items-center">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
 									<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -210,122 +210,114 @@
 			<div>
 				<div style="border: 1px solid #ccc; border-radius: 16px;">
 					<div class="row">
-						<!-- Edit -->
-						<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
-							<!-- Edit Modal -->
-							<div class="modal fade" id="editModal" data-bs-backdrop="static" tabindex="-1">
-								<div class="modal-dialog modal-dialog-centered">
-									<div class="modal-content">
+						<!-- Update Modal -->
+						<div class="modal fade" id="updateModal" data-bs-backdrop="static" tabindex="-1">
+							<div class="modal-dialog modal-dialog-centered">
+								<div class="modal-content">
 
-										<!-- Modal Title -->
-										<div class="modal-header">
-											<h5 class="modal-title">Editing</h5>
-											<div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
-												<div class="align-self-center" style="width: 100%;">
-													<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
+									<!-- Modal Title -->
+									<div class="modal-header">
+										<h5 class="modal-title">Update Contact</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+									</div>
+
+									<!-- Modal Body -->
+									<div class="modal-body">
+										<!--Info-->
+										<div class="info">
+											<form id="update-form" class="row g-3">
+												<div class="col-md-4">
+													<label for="update-first-name" class="form-label">First Name</label>
+													<input name="FirstName" type="name" class="form-control" id="update-first-name">
 												</div>
-											</div>
-											<h5 class="modal-title" id="edit-fullname"></h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+												<div class="col-md-4">
+													<label for="update-last-name" class="form-label">Last Name</label>
+													<input name="LastName" type="name" class="form-control" id="update-last-name">
+												</div>
+												<div class="col-md-4">
+													<label for="update-phone-number" class="form-label">Phone Number</label>
+													<input name="PhoneNumber" type="phone-number" class="form-control" id="update-phone-number">
+												</div>
+												<div class="col-8">
+													<label for="update-address" class="form-label">Address</label>
+													<input name="Address" type="text" class="form-control" id="update-address" placeholder="1234 Main St">
+												</div>
+												<div class="col-md-4">
+													<label for="update-zip" class="form-label">Zip</label>
+													<input name="ZIP" type="text" class="form-control" id="update-zip">
+												</div>
+												<div class="col-md-8">
+													<label for="update-city" class="form-label">City</label>
+													<input name="City" type="text" class="form-control" id="update-city">
+												</div>
+												<div class="col-md-4">
+													<label for="update-state" class="form-label">State</label>
+													<select name="State" id="update-state" class="form-select">
+														<option selected>Choose...</option>
+														<option value="AL">Alabama</option>
+														<option value="AK">Alaska</option>
+														<option value="AZ">Arizona</option>
+														<option value="AR">Arkansas</option>
+														<option value="CA">California</option>
+														<option value="CO">Colorado</option>
+														<option value="CT">Connecticut</option>
+														<option value="DE">Delaware</option>
+														<option value="DC">District Of Columbia</option>
+														<option value="FL">Florida</option>
+														<option value="GA">Georgia</option>
+														<option value="HI">Hawaii</option>
+														<option value="ID">Idaho</option>
+														<option value="IL">Illinois</option>
+														<option value="IN">Indiana</option>
+														<option value="IA">Iowa</option>
+														<option value="KS">Kansas</option>
+														<option value="KY">Kentucky</option>
+														<option value="LA">Louisiana</option>
+														<option value="ME">Maine</option>
+														<option value="MD">Maryland</option>
+														<option value="MA">Massachusetts</option>
+														<option value="MI">Michigan</option>
+														<option value="MN">Minnesota</option>
+														<option value="MS">Mississippi</option>
+														<option value="MO">Missouri</option>
+														<option value="MT">Montana</option>
+														<option value="NE">Nebraska</option>
+														<option value="NV">Nevada</option>
+														<option value="NH">New Hampshire</option>
+														<option value="NJ">New Jersey</option>
+														<option value="NM">New Mexico</option>
+														<option value="NY">New York</option>
+														<option value="NC">North Carolina</option>
+														<option value="ND">North Dakota</option>
+														<option value="OH">Ohio</option>
+														<option value="OK">Oklahoma</option>
+														<option value="OR">Oregon</option>
+														<option value="PA">Pennsylvania</option>
+														<option value="RI">Rhode Island</option>
+														<option value="SC">South Carolina</option>
+														<option value="SD">South Dakota</option>
+														<option value="TN">Tennessee</option>
+														<option value="TX">Texas</option>
+														<option value="UT">Utah</option>
+														<option value="VT">Vermont</option>
+														<option value="VA">Virginia</option>
+														<option value="WA">Washington</option>
+														<option value="WV">West Virginia</option>
+														<option value="WI">Wisconsin</option>
+														<option value="WY">Wyoming</option>
+													</select>
+												</div>
+											</form>
 										</div>
-
-										<!-- Modal Body -->
-										<div class="modal-body">
-											<!--Info-->
-											<div class="info">
-												<form class="row g-3">
-													<div class="col-md-4">
-														<label for="edit-first-name" class="form-label">First Name</label>
-														<input type="name" class="form-control" id="edit-first-name">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-last-name" class="form-label">Last Name</label>
-														<input type="name" class="form-control" id="edit-last-name">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-phone-number" class="form-label">Phone Number</label>
-														<input type="phone-number" class="form-control" id="edit-phone-number">
-													</div>
-													<div class="col-8">
-														<label for="edit-address" class="form-label">Address</label>
-														<input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-zip" class="form-label">Zip</label>
-														<input type="text" class="form-control" id="edit-zip">
-													</div>
-													<div class="col-md-8">
-														<label for="edit-city" class="form-label">City</label>
-														<input type="text" class="form-control" id="edit-city">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-state" class="form-label">State</label>
-														<select id="edit-state" class="form-select">
-															<option selected>Choose...</option>
-															<option value="AL">Alabama</option>
-															<option value="AK">Alaska</option>
-															<option value="AZ">Arizona</option>
-															<option value="AR">Arkansas</option>
-															<option value="CA">California</option>
-															<option value="CO">Colorado</option>
-															<option value="CT">Connecticut</option>
-															<option value="DE">Delaware</option>
-															<option value="DC">District Of Columbia</option>
-															<option value="FL">Florida</option>
-															<option value="GA">Georgia</option>
-															<option value="HI">Hawaii</option>
-															<option value="ID">Idaho</option>
-															<option value="IL">Illinois</option>
-															<option value="IN">Indiana</option>
-															<option value="IA">Iowa</option>
-															<option value="KS">Kansas</option>
-															<option value="KY">Kentucky</option>
-															<option value="LA">Louisiana</option>
-															<option value="ME">Maine</option>
-															<option value="MD">Maryland</option>
-															<option value="MA">Massachusetts</option>
-															<option value="MI">Michigan</option>
-															<option value="MN">Minnesota</option>
-															<option value="MS">Mississippi</option>
-															<option value="MO">Missouri</option>
-															<option value="MT">Montana</option>
-															<option value="NE">Nebraska</option>
-															<option value="NV">Nevada</option>
-															<option value="NH">New Hampshire</option>
-															<option value="NJ">New Jersey</option>
-															<option value="NM">New Mexico</option>
-															<option value="NY">New York</option>
-															<option value="NC">North Carolina</option>
-															<option value="ND">North Dakota</option>
-															<option value="OH">Ohio</option>
-															<option value="OK">Oklahoma</option>
-															<option value="OR">Oregon</option>
-															<option value="PA">Pennsylvania</option>
-															<option value="RI">Rhode Island</option>
-															<option value="SC">South Carolina</option>
-															<option value="SD">South Dakota</option>
-															<option value="TN">Tennessee</option>
-															<option value="TX">Texas</option>
-															<option value="UT">Utah</option>
-															<option value="VT">Vermont</option>
-															<option value="VA">Virginia</option>
-															<option value="WA">Washington</option>
-															<option value="WV">West Virginia</option>
-															<option value="WI">Wisconsin</option>
-															<option value="WY">Wyoming</option>
-														</select>
-													</div>
-												</form>
-											</div>
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-											<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
-										</div>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+										<button id="update-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
 									</div>
 								</div>
 							</div>
 						</div>
+						<div class="col-md-4"></div>
 						<div class="col-md-4">
 							<div class="d-flex" style="min-height: 50px; margin-top: 25px;">
 								<div class="profile-icon d-flex justify-content-center align-self-center">
@@ -338,7 +330,6 @@
 								</div>
 							</div>
 						</div>
-						<!-- Delete -->
 						<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
 							<!-- Delete Modal -->
 							<div class="modal fade" id="deleteModal" data-bs-backdrop="static" tabindex="-1">
