--- a/landing_page.html
+++ b/landing_page.html
@@ -204,189 +204,162 @@
 			</div>
 
 			<!-- Data -->
-			<div>
-				<div style="border: 1px solid #ccc; border-radius: 16px;">
-					<div class="row">
-						<!-- Edit -->
-						<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
-							<!-- Edit Modal -->
-							<div class="modal fade" id="editModal" data-bs-backdrop="static" tabindex="-1">
-								<div class="modal-dialog modal-dialog-centered">
-									<div class="modal-content">
+			<div style="display: flex; flex-direction: column;border: 1px solid #ccc; border-radius: 16px; width: 100%">
+				<div class="modal fade" id="editModal" data-bs-backdrop="static" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered">
+						<div class="modal-content">
 
-										<!-- Modal Title -->
-										<div class="modal-header">
-											<h5 class="modal-title">Editing</h5>
-											<div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
-												<div class="align-self-center" style="width: 100%;">
-													<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
-												</div>
-											</div>
-											<h5 class="modal-title" id="edit-fullname"></h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-										</div>
-
-										<!-- Modal Body -->
-										<div class="modal-body">
-											<!--Info-->
-											<div class="info">
-												<form class="row g-3">
-													<div class="col-md-4">
-														<label for="edit-first-name" class="form-label">First Name</label>
-														<input type="name" class="form-control" id="edit-first-name">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-last-name" class="form-label">Last Name</label>
-														<input type="name" class="form-control" id="edit-last-name">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-phone-number" class="form-label">Phone Number</label>
-														<input type="phone-number" class="form-control" id="edit-phone-number">
-													</div>
-													<div class="col-8">
-														<label for="edit-address" class="form-label">Address</label>
-														<input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-zip" class="form-label">Zip</label>
-														<input type="text" class="form-control" id="edit-zip">
-													</div>
-													<div class="col-md-8">
-														<label for="edit-city" class="form-label">City</label>
-														<input type="text" class="form-control" id="edit-city">
-													</div>
-													<div class="col-md-4">
-														<label for="edit-state" class="form-label">State</label>
-														<select id="edit-state" class="form-select">
-															<option selected>Choose...</option>
-															<option value="AL">Alabama</option>
-															<option value="AK">Alaska</option>
-															<option value="AZ">Arizona</option>
-															<option value="AR">Arkansas</option>
-															<option value="CA">California</option>
-															<option value="CO">Colorado</option>
-															<option value="CT">Connecticut</option>
-															<option value="DE">Delaware</option>
-															<option value="DC">District Of Columbia</option>
-															<option value="FL">Florida</option>
-															<option value="GA">Georgia</option>
-															<option value="HI">Hawaii</option>
-															<option value="ID">Idaho</option>
-															<option value="IL">Illinois</option>
-															<option value="IN">Indiana</option>
-															<option value="IA">Iowa</option>
-															<option value="KS">Kansas</option>
-															<option value="KY">Kentucky</option>
-															<option value="LA">Louisiana</option>
-															<option value="ME">Maine</option>
-															<option value="MD">Maryland</option>
-															<option value="MA">Massachusetts</option>
-															<option value="MI">Michigan</option>
-															<option value="MN">Minnesota</option>
-															<option value="MS">Mississippi</option>
-															<option value="MO">Missouri</option>
-															<option value="MT">Montana</option>
-															<option value="NE">Nebraska</option>
-															<option value="NV">Nevada</option>
-															<option value="NH">New Hampshire</option>
-															<option value="NJ">New Jersey</option>
-															<option value="NM">New Mexico</option>
-															<option value="NY">New York</option>
-															<option value="NC">North Carolina</option>
-															<option value="ND">North Dakota</option>
-															<option value="OH">Ohio</option>
-															<option value="OK">Oklahoma</option>
-															<option value="OR">Oregon</option>
-															<option value="PA">Pennsylvania</option>
-															<option value="RI">Rhode Island</option>
-															<option value="SC">South Carolina</option>
-															<option value="SD">South Dakota</option>
-															<option value="TN">Tennessee</option>
-															<option value="TX">Texas</option>
-															<option value="UT">Utah</option>
-															<option value="VT">Vermont</option>
-															<option value="VA">Virginia</option>
-															<option value="WA">Washington</option>
-															<option value="WV">West Virginia</option>
-															<option value="WI">Wisconsin</option>
-															<option value="WY">Wyoming</option>
-														</select>
-													</div>
-												</form>
-											</div>
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-											<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="d-flex" style="min-height: 50px; margin-top: 25px;">
-								<div class="profile-icon d-flex justify-content-center align-self-center">
+							<!-- Modal Title -->
+							<div class="modal-header">
+								<h5 class="modal-title">Editing</h5>
+								<div class="profile-icon d-flex justify-content-center align-self-center" style="margin-left: 82px;">
 									<div class="align-self-center" style="width: 100%;">
-										<h3 id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
+										<h3 style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0" id="edit-initials"></h3>
 									</div>
 								</div>
-								<div class="d-flex align-items-center justify-content-center w-100" style="padding: 5px;">
-									<h5 id="info-fullname" style="text-align: center; margin: 0; width: 100%;">No Contacts</h5>
-								</div>
+								<h5 class="modal-title" id="edit-fullname"></h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 							</div>
-						</div>
-						<!-- Delete -->
-						<div class="col-md-4" style="min-height: 50px; margin-top: 25px;">
-							<!-- Delete Modal -->
-							<div class="modal fade" id="deleteModal" data-bs-backdrop="static" tabindex="-1">
-								<div class="modal-dialog modal-dialog-centered">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+							<!-- Modal Body -->
+							<div class="modal-body">
+								<!--Info-->
+								<div class="info">
+									<form class="row g-3">
+										<div class="col-md-4">
+											<label for="edit-first-name" class="form-label">First Name</label>
+											<input type="name" class="form-control" id="edit-first-name">
 										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-											<button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+										<div class="col-md-4">
+											<label for="edit-last-name" class="form-label">Last Name</label>
+											<input type="name" class="form-control" id="edit-last-name">
 										</div>
-									</div>
+										<div class="col-md-4">
+											<label for="edit-phone-number" class="form-label">Phone Number</label>
+											<input type="phone-number" class="form-control" id="edit-phone-number">
+										</div>
+										<div class="col-8">
+											<label for="edit-address" class="form-label">Address</label>
+											<input type="text" class="form-control" id="edit-address" placeholder="1234 Main St">
+										</div>
+										<div class="col-md-4">
+											<label for="edit-zip" class="form-label">Zip</label>
+											<input type="text" class="form-control" id="edit-zip">
+										</div>
+										<div class="col-md-8">
+											<label for="edit-city" class="form-label">City</label>
+											<input type="text" class="form-control" id="edit-city">
+										</div>
+										<div class="col-md-4">
+											<label for="edit-state" class="form-label">State</label>
+											<select id="edit-state" class="form-select">
+												<option selected>Choose...</option>
+												<option value="AL">Alabama</option>
+												<option value="AK">Alaska</option>
+												<option value="AZ">Arizona</option>
+												<option value="AR">Arkansas</option>
+												<option value="CA">California</option>
+												<option value="CO">Colorado</option>
+												<option value="CT">Connecticut</option>
+												<option value="DE">Delaware</option>
+												<option value="DC">District Of Columbia</option>
+												<option value="FL">Florida</option>
+												<option value="GA">Georgia</option>
+												<option value="HI">Hawaii</option>
+												<option value="ID">Idaho</option>
+												<option value="IL">Illinois</option>
+												<option value="IN">Indiana</option>
+												<option value="IA">Iowa</option>
+												<option value="KS">Kansas</option>
+												<option value="KY">Kentucky</option>
+												<option value="LA">Louisiana</option>
+												<option value="ME">Maine</option>
+												<option value="MD">Maryland</option>
+												<option value="MA">Massachusetts</option>
+												<option value="MI">Michigan</option>
+												<option value="MN">Minnesota</option>
+												<option value="MS">Mississippi</option>
+												<option value="MO">Missouri</option>
+												<option value="MT">Montana</option>
+												<option value="NE">Nebraska</option>
+												<option value="NV">Nevada</option>
+												<option value="NH">New Hampshire</option>
+												<option value="NJ">New Jersey</option>
+												<option value="NM">New Mexico</option>
+												<option value="NY">New York</option>
+												<option value="NC">North Carolina</option>
+												<option value="ND">North Dakota</option>
+												<option value="OH">Ohio</option>
+												<option value="OK">Oklahoma</option>
+												<option value="OR">Oregon</option>
+												<option value="PA">Pennsylvania</option>
+												<option value="RI">Rhode Island</option>
+												<option value="SC">South Carolina</option>
+												<option value="SD">South Dakota</option>
+												<option value="TN">Tennessee</option>
+												<option value="TX">Texas</option>
+												<option value="UT">Utah</option>
+												<option value="VT">Vermont</option>
+												<option value="VA">Virginia</option>
+												<option value="WA">Washington</option>
+												<option value="WV">West Virginia</option>
+												<option value="WI">Wisconsin</option>
+												<option value="WY">Wyoming</option>
+											</select>
+										</div>
+									</form>
 								</div>
 							</div>
-						</div>
-						<div class="col-12">
-							<div class="info" style="margin-top: 25px;">
-								<form class="row g-3">
-									<div class="col-md-4">
-										<label for="info-first-name"><strong>First Name</strong></label>
-										<p id="info-first-name">No Contacts</p>
-									</div>
-									<div class="col-md-4">
-										<label for="info-last-name"><strong>Last Name</strong></label>
-										<p id="info-last-name">No Contacts</p>
-									</div>
-									<div class="col-md-4">
-										<label for="info-phone-number"><strong>Phone Number</strong></label>
-										<p id="info-phone-number">No Contacts</p>
-									</div>
-									<div class="col-md-8">
-										<label for="info-address"><strong>Address</strong></label>
-										<p id="info-address">No Contacts</p>
-									</div>
-									<div class="col-md-4">
-										<label for="info-zip"><strong>ZIP</strong></label>
-										<p id="info-zip">No Contacts</p>
-									</div>
-									<div class="col-md-8">
-										<label for="info-city"><strong>City</strong></label>
-										<p id="info-city">No Contacts</p>
-									</div>
-									<div class="col-md-4">
-										<label for="info-state"><strong>State</strong></label>
-										<p id="info-state">No Contacts</p>
-									</div>
-								</form>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary" data-bs-dismiss="modal" onclick="editSelectedContact()">Save changes</button>
 							</div>
 						</div>
+					</div>
+				</div>
+				<!-- Delete -->
+				<!-- Delete Modal -->
+				<div class="modal fade" id="deleteModal" data-bs-backdrop="static" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+								<button id="delete-btn" type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div id="info-pane" class="info" style="display: flex; flex-direction: column; justify-items: center; align-items: center">
+					<div class="profile-icon enlarged d-flex justify-content-center align-self-center">
+						<div class="align-self-center" style="width: 100%;">
+							<h3 class="profile-ab enlarged" id="info-initials" style="text-align: center; font-weight: 300; font-size: 18px; margin-bottom: 0">NC</h3>
+						</div>
+					</div>
+					<h1 id="info-full-name">First Last</h1>
+					<div data-contact-key="PhoneNumber">
+						<label for="info-phone-number"><strong>Phone Number</strong></label>
+						<p id="info-phone-number">No Contacts</p>
+					</div>
+					<div data-contact-key="Address">
+						<label for="info-address"><strong>Address</strong></label>
+						<p id="info-address">No Contacts</p>
+					</div>
+					<div data-contact-key="ZIP">
+						<label for="info-zip"><strong>ZIP</strong></label>
+						<p id="info-zip">No Contacts</p>
+					</div>
+					<div data-contact-key="City">
+						<label for="info-city"><strong>City</strong></label>
+						<p id="info-city">No Contacts</p>
+					</div>
+					<div data-contact-key="State">
+						<label for="info-state"><strong>State</strong></label>
+						<p id="info-state">No Contacts</p>
 					</div>
 				</div>
 			</div>
