--- a/landing_page.html
+++ b/landing_page.html
@@ -38,7 +38,7 @@
 
 	<!--Contacts-->
 	<div class="d-flex" style="justify-items: left; width: 100%">
-		<div class="p-3 beveledBox d-flex flex-column" style="margin-right: 20px; min-width: 350px; max-height: 650px;">
+		<div class="p-3 beveledBox d-flex flex-column" style="margin-right: 20px; min-width: 350px; max-height: 700px;">
 			<div class="d-flex" style="justify-content: space-between; align-items: center;">
 				<h1 style="text-align: left">Contacts</h1>
 				<button data-bs-toggle="modal" data-bs-target="#newModal" type="button" class="btn btn-primary add-button">
@@ -67,7 +67,7 @@
 			</ul>
 		</div>
 
-		<div class="p-3 beveledBox d-flex flex-column" id="notificationLanding" style="width: 100%; max-height: 700px; overflow: auto">
+		<div class="p-3 beveledBox d-flex flex-column" id="notificationLanding" style="width: 100%; min-height: 700px; overflow: auto">
 			<!-- New -->
 			<div class="d-flex" style="align-items: center">
 				<!-- New Modal -->
